core/kubernetes/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: moni/auth-service:latest
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: '800m'
              memory: '800Mi'
            requests:
              cpu: '400m'
              memory: '400Mi'
